[gd_scene load_steps=10 format=3 uid="uid://td8ix332wgmf"]

[ext_resource type="Texture2D" uid="uid://dh82lsx0ck8ha" path="res://Assets/Pixel Art Bird 16x16/BirdSprite.png" id="1_8me6o"]
[ext_resource type="Script" path="res://Main/Character/bird.gd" id="1_fdojv"]
[ext_resource type="AudioStream" uid="uid://dknjdlgh2pgus" path="res://Assets/Sound/Xtyphma cutted.wav" id="3_cgobq"]
[ext_resource type="AudioStream" uid="uid://htpjsen2cajh" path="res://Assets/Sound/Ftera_826fa540-3eb6-45b9-be2c-8f87647a088f.wav" id="4_ilcu1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_603s8"]
radius = 6.0

[sub_resource type="Animation" id="Animation_on40r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 1)]
}

[sub_resource type="Animation" id="Animation_tf3ln"]
resource_name = "die"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2)]
}

[sub_resource type="Animation" id="Animation_4qlj4"]
resource_name = "fly"
length = 1.15
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3e2vu"]
_data = {
"RESET": SubResource("Animation_on40r"),
"die": SubResource("Animation_tf3ln"),
"fly": SubResource("Animation_4qlj4")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
texture_filter = 1
scale = Vector2(2, 2)
script = ExtResource("1_fdojv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_603s8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_8me6o")
hframes = 8
vframes = 3
frame = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3e2vu")
}

[node name="DieFromSpikes" type="Timer" parent="."]

[node name="GameOver" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("3_cgobq")
volume_db = 20.0
pitch_scale = 1.7

[node name="FlashCooldown" type="Timer" parent="."]
wait_time = 4.0

[node name="WingsFlap" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ilcu1")
volume_db = 3.0

[connection signal="timeout" from="DieFromSpikes" to="." method="_on_die_from_spikes_timeout"]
[connection signal="timeout" from="FlashCooldown" to="." method="_on_flash_cooldown_timeout"]
